# catalog

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Justfile  README.md  pyproject.toml
backend/catalog/: application.py  main.py  piccolo_conf.py
backend/catalog/applications/auth/: controller.py  guards.py  schemas.py  services.py
backend/catalog/config/: config.py  cors.py  csrf.py
backend/scripts/: migrations.sh
