[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar>=2.15.2",
    "orjson>=3.10.16",
    "piccolo-admin>=1.9.1",
    "piccolo[postgres]>=1.25.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
]
